--- a/tox.ini
+++ b/tox.ini
@@ -2,16 +2,18 @@
 isolated_build = True
 envlist =
     py{38,39,310,311,312}-dj42-sqlite
-    py{310,311,312}-dj50-{sqlite,pg2,pg3,mysql}
-    py{310,311,312}-dj51-sqlite
-    py{310,311,312}-djmain-sqlite
+    py{310,311,312}-dj50-sqlite
+    py{310,311,312}-dj51-{sqlite,pg2,pg3,mysql}
+    py{310,311,312}-dj52-sqlite
+    py{312}-djmain-sqlite
 
 [testenv]
 pip_pre = True
 deps =
     dj42: django~=4.2.0
     dj50: django~=5.0.0
-    dj51: django~=5.1b
+    dj51: django~=5.1.0
+    dj52: django~=5.2a1
     djmain: https://github.com/django/django/archive/main.tar.gz
     pytest
     pytest-cov
