--- a/tox.ini
+++ b/tox.ini
@@ -20,9 +20,9 @@ deps =
     pytest-django
     pytest-mock
     dj-database-url
-    pg2: psycopg2-binary
-    pg3: psycopg[binary]
-    mysql: mysqlclient
+    pg2: django-safemigrate[pg2]
+    pg3: django-safemigrate[pg]
+    mysql: django-safemigrate[mysql]
 setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS = d
