--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ setenv =
     pg2,pg3: DATABASE_URL = {env:DATABASE_URL:postgresql://django_safemigrate:django_safemigrate@localhost/django_safemigrate}
     mysql: DATABASE_URL = {env:DATABASE_URL:mysql://django_safemigrate:django_safemigrate@127.0.0.1/django_safemigrate}
     sqlite: DATABASE_URL = {env:DATABASE_URL:sqlite:///:memory:}
-commands = pytest --cov --cov-report= {posargs}
+commands = pytest {posargs}
 
 [gh-actions]
 python =
