--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,14 +32,14 @@ jobs:
       - uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - run: uv pip install tox-uv tox-gh-actions coverage
+      - run: uv pip install tox-uv tox-gh-actions coverage[toml]
       - name: Run tox
         env:
           DB: mysql
           DATABASE_URL: "mysql://root:django_safemigrate@127.0.0.1/django_safemigrate"
         run: |
           uv pip install -e .[mysql]
-          tox -- --cov --cov-report=
+          tox
           python -m coverage combine
           python -m coverage xml
 
@@ -95,7 +95,7 @@ jobs:
       - uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - run: uv pip install tox-uv tox-gh-actions coverage
+      - run: uv pip install tox-uv tox-gh-actions coverage[toml]
 
       - name: Run tox
         env:
@@ -107,7 +107,7 @@ jobs:
           else
             uv pip install -e .[pg]
           fi
-          tox -- --cov --cov-report=
+          tox
           python -m coverage combine
           python -m coverage xml
 
@@ -138,14 +138,14 @@ jobs:
       - uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - run: uv pip install tox-uv tox-gh-actions coverage
+      - run: uv pip install tox-uv tox-gh-actions coverage[toml]
 
       - name: Run tox
         env:
           DB: sqlite
           DATABASE_URL: "sqlite:///:memory:"
         run: |
-          tox -- --cov --cov-report=
+          tox
           python -m coverage combine
           python -m coverage xml
 
