--- a/tox.ini
+++ b/tox.ini
@@ -15,9 +15,10 @@ deps =
     dj51: django~=5.1.0
     dj52: django~=5.2a1
     dj60: https://github.com/django/django/archive/main.tar.gz
-    pg2: django-safemigrate[pg2]
-    pg3: django-safemigrate[pg]
-    mysql: django-safemigrate[mysql]
+extras =
+    pg2: pg2
+    pg3: pg
+    mysql: mysql
 dependency_groups = dev
 setenv =
     PYTHONWARNINGS = d
