Remove optional dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,9 @@ deps =
     dj51: django~=5.1.0
     dj52: django~=5.2a1
     dj60: https://github.com/django/django/archive/main.tar.gz
-extras =
-    pg2: pg2
-    pg3: pg
-    mysql: mysql
+    pg2: psycopg2-binary
+    pg3: psycopg3
+    mysql: mysqlclient
 dependency_groups = dev
 setenv =
     PYTHONWARNINGS = d
