Name the factor djmain

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 isolated_build = True
 envlist =
-    dj42-py{38,39,310,311,312    }-{sqlite              }
-    dj50-py{      310,311,312,313}-{sqlite              }
-    dj51-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
-    dj52-py{      310,311,312,313}-{sqlite              }
-    dj60-py{              312,313}-{sqlite              }
+    {dj42  }-py{38,39,310,311,312    }-{sqlite              }
+    {dj50  }-py{      310,311,312,313}-{sqlite              }
+    {dj51  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
+    {dj52  }-py{      310,311,312,313}-{sqlite              }
+    {djmain}-py{              312,313}-{sqlite              }
 
 [testenv]
 pip_pre = True
@@ -14,7 +14,7 @@ deps =
     dj50: django~=5.0.0
     dj51: django~=5.1.0
     dj52: django~=5.2a1
-    dj60: https://github.com/django/django/archive/main.tar.gz
+    djmain: https://github.com/django/django/archive/main.tar.gz
     pg2: psycopg2-binary
     pg3: psycopg3
     mysql: mysqlclient
