The package is called psycopg

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     dj52: django~=5.2a1
     djmain: https://github.com/django/django/archive/main.tar.gz
     pg2: psycopg2-binary
-    pg3: psycopg3
+    pg3: psycopg
     mysql: mysqlclient
 dependency_groups = dev
 setenv =
