make sure codecov reads from toml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -159,7 +159,7 @@ jobs:
           merge-multiple: true
       - name: Combine coverage
         run: |
-          uv pip install coverage
+          uv pip install coverage[toml]
           coverage combine
           coverage xml
       - name: Upload coverage
