--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,6 +158,8 @@ jobs:
           pattern: .coverage.*
           merge-multiple: true
       - run: uv pip install coverage[toml]
+      - run: pwd
+      - run: ls -la
       - run: coverage combine
       - run: coverage xml
       - name: Upload coverage
