Use uv to build (#73)

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 isolated_build = True
 envlist =
-    py{38,39,310,311,312}-dj42-sqlite
-    py{310,311,312,313}-dj50-sqlite
-    py{310,311,312,313}-dj51-{sqlite,pg2,pg3,mysql}
-    py{310,311,312,313}-dj52-sqlite
-    py{312,313}-djmain-sqlite
+    {dj42  }-py{38,39,310,311,312    }-{sqlite              }
+    {dj50  }-py{      310,311,312,313}-{sqlite              }
+    {dj51  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
+    {dj52  }-py{      310,311,312,313}-{sqlite              }
+    {djmain}-py{              312,313}-{sqlite              }
 
 [testenv]
 pip_pre = True
@@ -15,18 +15,12 @@ deps =
     dj51: django~=5.1.0
     dj52: django~=5.2a1
     djmain: https://github.com/django/django/archive/main.tar.gz
-    pytest
-    pytest-cov
-    pytest-django
-    pytest-mock
-    dj-database-url
     pg2: psycopg2-binary
-    pg3: psycopg[binary]
+    pg3: psycopg
     mysql: mysqlclient
+dependency_groups = dev
 setenv =
-    PYTHONPATH = {toxinidir}
     PYTHONWARNINGS = d
-    DJANGO_SETTINGS_MODULE = tests.testproject.settings
     pg2,pg3: DATABASE_URL = {env:DATABASE_URL:postgresql://django_safemigrate:django_safemigrate@localhost/django_safemigrate}
     mysql: DATABASE_URL = {env:DATABASE_URL:mysql://django_safemigrate:django_safemigrate@127.0.0.1/django_safemigrate}
     sqlite: DATABASE_URL = {env:DATABASE_URL:sqlite:///:memory:}
@@ -48,3 +42,7 @@ DB =
     pg2: pg2
     pg3: pg3
     sqlite: sqlite
+
+[pytest]
+DJANGO_SETTINGS_MODULE = tests.testproject.settings
+pythonpath = .
