--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,47 +28,26 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key:
-            ${{ matrix.python-version }}-v1-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/tox.ini') }}
-          restore-keys: |
-            ${{ matrix.python-version }}-v1-
-
-      - name: Install Tox
-        run: python -m pip install --upgrade pip tox tox-gh-actions coverage[toml]
-
+      - run: uv pip install tox-uv tox-gh-actions coverage[toml]
       - name: Run tox
         env:
           DB: mysql
           DATABASE_URL: "mysql://root:django_safemigrate@127.0.0.1/django_safemigrate"
+        run: tox
+      - name: Prepare coverage file
         run: |
-          tox
-          python -m coverage combine
-          python -m coverage xml
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v3
+          coverage combine
+          mv .coverage .coverage.mysql.py${{ matrix.python-version }}
+      - name: Save coverage file
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          name: Python ${{ matrix.python-version }} MySQL
-          files: "coverage.xml"
-          fail_ci_if_error: true
-          verbose: true
+          name: .coverage.mysql.py${{ matrix.python-version }}
+          path: .coverage.mysql.py${{ matrix.python-version }}
+          include-hidden-files: true
 
 
   postgres:
@@ -109,47 +88,26 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key:
-            ${{ matrix.python-version }}-v1-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/tox.ini') }}
-          restore-keys: |
-            ${{ matrix.python-version }}-v1-
-
-      - name: Install Tox
-        run: python -m pip install --upgrade pip tox tox-gh-actions coverage[toml]
-
+      - run: uv pip install tox-uv tox-gh-actions coverage[toml]
       - name: Run tox
         env:
           DB: ${{ matrix.database }}
           DATABASE_URL: "postgresql://django_safemigrate:django_safemigrate@localhost/django_safemigrate"
+        run: tox
+      - name: Prepare coverage file
         run: |
-          tox
-          python -m coverage combine
-          python -m coverage xml
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v3
+          coverage combine
+          mv .coverage .coverage.${{ matrix.database }}.py${{ matrix.python-version }}
+      - name: Save coverage file
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          name: Python ${{ matrix.python-version }} ${{ matrix.database }}
-          files: "coverage.xml"
-          fail_ci_if_error: true
-          verbose: true
+          name: .coverage.${{ matrix.database }}.py${{ matrix.python-version }}
+          path: .coverage.${{ matrix.database }}.py${{ matrix.python-version }}
+          include-hidden-files: true
 
 
   sqlite:
@@ -165,44 +123,47 @@ jobs:
         - "3.13"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.pip-cache.outputs.dir }}
-          key:
-            ${{ matrix.python-version }}-v1-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/tox.ini') }}
-          restore-keys: |
-            ${{ matrix.python-version }}-v1-
-
-      - name: Install Tox
-        run: python -m pip install --upgrade pip tox tox-gh-actions coverage[toml]
+      - run: uv pip install tox-uv tox-gh-actions coverage[toml]
 
       - name: Run tox
         env:
           DB: sqlite
           DATABASE_URL: "sqlite:///:memory:"
+        run: tox
+      - name: Prepare coverage file
         run: |
-          tox
-          python -m coverage combine
-          python -m coverage xml
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v3
+          coverage combine
+          mv .coverage .coverage.sqlite.py${{ matrix.python-version }}
+      - name: Save coverage file
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          name: Python ${{ matrix.python-version }} SQLite
-          files: "coverage.xml"
+          name: .coverage.sqlite.py${{ matrix.python-version }}
+          path: .coverage.sqlite.py${{ matrix.python-version }}
+          include-hidden-files: true
+
+  codecov:
+    needs: [mysql, postgres, sqlite]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v5
+        with:
+          python-version: 3.13
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: .coverage.*
+          merge-multiple: true
+      - run: uv pip install coverage[toml]
+      - run: pwd
+      - run: ls -la
+      - run: coverage combine
+      - run: coverage xml
+      - name: Upload coverage
+        uses: codecov/codecov-action@v5
+        with:
           fail_ci_if_error: true
-          verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
