--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,28 @@
 [build-system]
-build-backend = "poetry.masonry.api"
-requires = [
-  "poetry>=0.12",
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "django-safemigrate"
+version = "4.3"
+description = "Safely run migrations before deployment"
+authors = [{ name = "Ryan Hiebert", email = "ryan@aspiredu.com" }]
+license = { text = "MIT" }
+readme = "README.rst"
+requires-python = ">=3.8"
+dependencies = ["django>=4.2"]
+
+[project.scripts]
+safemigrate-check = "django_safemigrate.check:main"
+
+[dependency-groups]
+dev = [
+  "pytest",
+  "pytest-cov",
+  "pytest-django",
+  "pytest-mock",
+  "dj-database-url",
+  "coverage[toml]",
 ]
 
 [tool.isort]
@@ -14,25 +35,10 @@ parallel = true
 source = ["django_safemigrate"]
 
 [tool.coverage.paths]
-source = ["src", ".tox/*/site-packages"]
+source = [
+  "src/django_safemigrate",
+  ".tox/*/lib/python*/site-packages/django_safemigrate",
+]
 
 [tool.coverage.report]
 show_missing = true
-
-[tool.poetry]
-name = "django-safemigrate"
-version = "4.3"
-description = "Safely run migrations before deployment"
-authors = ["Ryan Hiebert <ryan@aspiredu.com>"]
-license = "MIT"
-readme = "README.rst"
-
-[tool.poetry.dependencies]
-python = ">=3.8"
-django = ">=4.2"
-
-[tool.poetry.dev-dependencies]
-tox = "*"
-
-[tool.poetry.plugins."console_scripts"]
-"safemigrate-check" = "django_safemigrate.check:main"
