Run tests with all django for all databases

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 isolated_build = True
 envlist =
-    {dj42  }-py{38,39,310,311,312    }-{sqlite              }
-    {dj50  }-py{      310,311,312,313}-{sqlite              }
+    {dj42  }-py{38,39,310,311,312    }-{sqlite,pg2,pg3,mysql}
+    {dj50  }-py{      310,311,312    }-{sqlite,pg2,pg3,mysql}
     {dj51  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
-    {dj52  }-py{      310,311,312,313}-{sqlite              }
-    {djmain}-py{              312,313}-{sqlite              }
+    {dj52  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
+    {djmain}-py{              312,313}-{sqlite,pg2,pg3,mysql}
 
 [testenv]
 pip_pre = True
