Simplify the actions build matrix

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
 isolated_build = True
 envlist =
-    {dj42  }-py{38,39,310,311,312    }-{sqlite,pg2,pg3,mysql}
-    {dj50  }-py{      310,311,312    }-{sqlite,pg2,pg3,mysql}
-    {dj51  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
-    {dj52  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
-    {djmain}-py{              312,313}-{sqlite,pg2,pg3,mysql}
+    dj{42  }-py{38,39,310,311,312    }-{sqlite,pg2,pg3,mysql}
+    dj{50  }-py{      310,311,312    }-{sqlite,pg2,pg3,mysql}
+    dj{51  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
+    dj{52  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
+    dj{main}-py{              312,313}-{sqlite,pg2,pg3,mysql}
 
 [testenv]
 pip_pre = True
@@ -16,7 +16,7 @@ deps =
     dj52: django~=5.2a1
     djmain: https://github.com/django/django/archive/main.tar.gz
     pg2: psycopg2-binary
-    pg3: psycopg
+    pg3: psycopg[binary]
     mysql: mysqlclient
 dependency_groups = dev
 setenv =
