--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
             DATABASE_URL="sqlite:///:memory:"
           elif [ "${{ matrix.database }}" = "mysql" ]; then
             DATABASE_URL="mysql://root:django_safemigrate@127.0.0.1/django_safemigrate"
-          elif [ "${{ matrix.database }}" = "pg2" || "${{ matrix.database }}" = "pg3" ]; then
+          elif [ "${{ matrix.database }}" = "pg2" ] || [ "${{ matrix.database }}" = "pg3" ]; then
             DATABASE_URL="postgresql://django_safemigrate:django_safemigrate@localhost/django_safemigrate"
           fi
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_OUTPUT
