--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
 
     services:
       mariadb:
-        # image: ${{ (matrix.database == 'mysql') && 'mariadb' || '' }}
-        image: mariadb
+        image: ${{ (matrix.database == 'mysql') && 'mariadb' || '' }}
+        # image: mariadb
         env:
           MARIADB_ROOT_PASSWORD: django_safemigrate
         options: >-
@@ -30,8 +30,8 @@ jobs:
         ports:
         - 3306:3306
       postgres:
-        # image: ${{ (matrix.database == 'pg2' || matrix.database == 'pg3') && 'postgres' || '' }}
-        image: postgres
+        image: ${{ (matrix.database == 'pg2' || matrix.database == 'pg3') && 'postgres' || '' }}
+        # image: postgres
         env:
           POSTGRES_DB: django_safemigrate
           POSTGRES_USER: django_safemigrate
