Add devcontainer configuration

--- a/tox.ini
+++ b/tox.ini
@@ -21,9 +21,8 @@ deps =
 dependency_groups = dev
 setenv =
     PYTHONWARNINGS = d
-    pg2,pg3: DATABASE_URL = {env:DATABASE_URL:postgresql://django_safemigrate:django_safemigrate@localhost/django_safemigrate}
-    mysql: DATABASE_URL = {env:DATABASE_URL:mysql://django_safemigrate:django_safemigrate@127.0.0.1/django_safemigrate}
-    sqlite: DATABASE_URL = {env:DATABASE_URL:sqlite:///:memory:}
+    pg2,pg3: DATABASE_URL = {env:PGSQL_DATABASE_URL:postgresql://django_safemigrate:django_safemigrate@localhost/django_safemigrate}
+    mysql: DATABASE_URL = {env:MYSQL_DATABASE_URL:mysql://django_safemigrate:django_safemigrate@127.0.0.1/django_safemigrate}
 commands =
     python -m coverage run -m pytest {posargs}
 
