Only test on one database

--- a/tox.ini
+++ b/tox.ini
@@ -1,46 +1,21 @@
 [tox]
 isolated_build = True
 envlist =
-    dj{42  }-py{38,39,310,311,312    }-{sqlite,pg2,pg3,mysql}
-    dj{50  }-py{      310,311,312    }-{sqlite,pg2,pg3,mysql}
-    dj{51  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
-    dj{52  }-py{      310,311,312,313}-{sqlite,pg2,pg3,mysql}
-    dj{main}-py{              312,313}-{sqlite,pg2,pg3,mysql}
+    dj{42  }-py{38,39,310,311,312    }
+    dj{50  }-py{      310,311,312    }
+    dj{51  }-py{      310,311,312,313}
+    dj{52  }-py{      310,311,312,313}
+    dj{main}-py{              312,313}
 
 [testenv]
-pip_pre = True
 deps =
     dj42: django~=4.2.0
     dj50: django~=5.0.0
     dj51: django~=5.1.0
     dj52: django~=5.2a1
     djmain: https://github.com/django/django/archive/main.tar.gz
-    pg2: psycopg2-binary
-    pg3: psycopg[binary]
-    mysql: mysqlclient
 dependency_groups = dev
-setenv =
-    PYTHONWARNINGS = d
-    pg2,pg3: DATABASE_URL = {env:PGSQL_DATABASE_URL:postgresql://django_safemigrate:django_safemigrate@localhost/django_safemigrate}
-    mysql: DATABASE_URL = {env:MYSQL_DATABASE_URL:mysql://django_safemigrate:django_safemigrate@127.0.0.1/django_safemigrate}
-commands =
-    python -m coverage run -m pytest {posargs}
-
-[gh-actions]
-python =
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    3.11: py311
-    3.12: py312
-    3.13: py313
-
-[gh-actions:env]
-DB =
-    mysql: mysql
-    pg2: pg2
-    pg3: pg3
-    sqlite: sqlite
+commands = pytest
 
 [pytest]
 DJANGO_SETTINGS_MODULE = tests.testproject.settings
