--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,8 +70,8 @@ jobs:
       - name: Save coverage file
         uses: actions/upload-artifact@v4
         with:
-          name: .coverage.${{ matrix.database }}.py${{ matrix.python-version }}
-          path: .coverage.${{ matrix.database }}.py${{ matrix.python-version }}
+          name: .coverage.dj${{ matrix.django-version }}.py${{ matrix.python-version }}
+          path: .coverage.dj${{ matrix.django-version }}.py${{ matrix.python-version }}
           include-hidden-files: true
 
   codecov:
