Add some helpful urls metadata to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,19 @@ build-backend = "hatchling.build"
 
 [project]
 name = "django-safemigrate"
-version = "5.2"
+version = "5.3"
 description = "Safely run migrations before deployment"
 authors = [{ name = "Ryan Hiebert", email = "ryan@ryanhiebert.com" }]
 license = { text = "MIT" }
 readme = "README.rst"
 requires-python = ">=3.8"
 dependencies = ["django>=4.2"]
+
+[project.urls]
+homepage = "https://github.com/ryanhiebert/django-safemigrate"
+source = "https://github.com/ryanhiebert/django-safemigrate"
+history = "https://github.com/ryanhiebert/django-safemigrate/blob/main/HISTORY.rst"
+issues = "https://github.com/ryanhiebert/django-safemigrate/issues"
 
 [project.scripts]
 safemigrate-check = "django_safemigrate.check:main"
